fix(FEV-1648): add z-index to quiz popup

--- a/src/components/ivq-popup/ivq-pupup.scss
+++ b/src/components/ivq-popup/ivq-pupup.scss
@@ -10,6 +10,7 @@
   backdrop-filter: blur(8px);
   border-radius: 4px;
   @include ivq-text;
+  z-index: 2;
   &.submit {
     width: 282px;
     height: 148px;
